--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
@@ -33,28 +33,28 @@
                 <img src="https://via.placeholder.com/300x200.png?text=Imagem+Produto" alt="Produto 1">
                 <h3>Nome do Produto 1</h3>
                 <p class="price">R$ 99,90</p>
-                <a href="#" class="btn-details">Ver Detalhes</a>
+                <a href="products/Em destaque/produto_destaque1.html" class="btn-details">Ver Detalhes</a>
             </div>
             <!-- Produto 2 -->
             <div class="product-card">
                 <img src="https://via.placeholder.com/300x200.png?text=Imagem+Produto" alt="Produto 2">
                 <h3>Nome do Produto 2</h3>
                 <p class="price">R$ 129,90</p>
-                <a href="#" class="btn-details">Ver Detalhes</a>
+                <a href="products/Em destaque/produto_destaque2.html" class="btn-details">Ver Detalhes</a>
             </div>
             <!-- Produto 3 -->
             <div class="product-card">
                 <img src="https://via.placeholder.com/300x200.png?text=Imagem+Produto" alt="Produto 3">
                 <h3>Nome do Produto 3</h3>
                 <p class="price">R$ 79,50</p>
-                <a href="#" class="btn-details">Ver Detalhes</a>
+                <a href="products/Em destaque/produto_destaque3.html" class="btn-details">Ver Detalhes</a>
             </div>
             <!-- Produto 4 (simulando mais produtos) -->
             <div class="product-card">
                 <img src="https://via.placeholder.com/300x200.png?text=Imagem+Produto" alt="Produto 4">
                 <h3>Nome do Produto 4</h3>
                 <p class="price">R$ 199,00</p>
-                <a href="#" class="btn-details">Ver Detalhes</a>
+                <a href="products/Em destaque/produto_destaque4.html" class="btn-details">Ver Detalhes</a>
             </div>
         </div>
     </section>
