--- a/produto.html
+++ b/produto.html
@@ -33,10 +33,10 @@
             </div>
 
             <div class="product-info-section">
-                <h1>Nome do Produto Exemplo</h1>
+                <h1>teste</h1>
                 <p class="product-price-detail">R$ 299,90</p>
                 <p class="product-description-short">
-                    Breve descrição do produto. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                    asfasdasdasdadadadasdasdasdasdasdasadsadasdasdasdadasdasda.
                 </p>
                 <a href="#" class="btn-buy-now">Comprar Agora</a>
             </div>
