--- a/gerenciador.html
+++ b/gerenciador.html
@@ -22,7 +22,7 @@
 
     <main class="container section-padding">
         <h1>Gerenciador de Produtos</h1>
-        <p class="instrucao-gerenciador">Use o formulário abaixo para gerar o código JSON de um novo produto. Copie o código gerado e adicione-o manualmente ao final do seu arquivo <code>produtos.json</code> no seu repositório.</p>
+        <p class="instrucao-gerenciador">Use o formulário abaixo para adicionar ou atualizar produtos diretamente no Firebase. As alterações serão refletidas no site automaticamente.</p>
 
         <form id="form-novo-produto">
             <h3>Adicionar Novo Produto</h3>
@@ -71,7 +71,7 @@
             
             <hr>
 
-            <button type="submit" class="btn-principal">Gerar JSON do Produto</button>
+            <button type="submit" class="btn-principal">Salvar Produto no Firebase</button>
         </form>
 
         <div id="resultado-json-container" style="display:none; margin-top: 30px;">
