--- a/produto.html
+++ b/produto.html
@@ -26,9 +26,9 @@
                 <img src="https://via.placeholder.com/400x400.png?text=Imagem+Principal+Produto" alt="Imagem Principal do Produto" id="main-product-image">
                 <!-- Miniaturas (opcional) -->
                 <div class="thumbnail-images">
-                    <img src="https://via.placeholder.com/80x80.png?text=Thumb1" alt="Miniatura 1" class="thumbnail">
-                    <img src="https://via.placeholder.com/80x80.png?text=Thumb2" alt="Miniatura 2" class="thumbnail">
-                    <img src="https://via.placeholder.com/80x80.png?text=Thumb3" alt="Miniatura 3" class="thumbnail">
+                    <img src="/img_produtos/produto1.png" alt="Miniatura 1" class="thumbnail">
+                    <img src="/img_produtos/produto1.png" alt="Miniatura 2" class="thumbnail">
+                    <img src="/img_produtos/produto1.png" alt="Miniatura 3" class="thumbnail">
                 </div>
             </div>
 
