--- a/gerenciador.html
+++ b/gerenciador.html
@@ -6,6 +6,10 @@
     <title>Gerenciador de Produtos - Afiliados Mercado Livre</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/gerenciador.css"> <!-- CSS específico para o gerenciador -->
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
+    <script src="js/firebase-config.js"></script>
+    <script src="js/script.js"></script>
 </head>
 <body class="pagina-gerenciador">
     <header>
