--- a/index.html
+++ b/index.html
@@ -16,7 +16,14 @@
 <body>
     <header>
         <div class="container">
-            <div class="logo-placeholder">Seu Logo Aqui</div>
+            <div class="logo-placeholder">
+            <img src="/img_produtos/produto1.png" 
+                 alt="Logo da Empresa"
+                 title="Voltar ao início">
+        </a>
+
+            </div>
+            
             <nav>
                 <ul>
                     <li><a href="index.html">Início</a></li>
