--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <nav>
                 <ul>
                     <li><a href="index.html">Início</a></li>
-                    <li><a href="#sobre">Sobre</a></li>
+                    <li><a href="sobre.html">Sobre</a></li>
                     <li><a href="#produtos">Produtos</a></li>
                     <li><a href="gerenciador.html">Gerenciar Produtos</a></li> <!-- Link para o gerenciador -->
                 </ul>
