Atualização de fontes e estilo Neurophorm

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Afiliados Mercado Livre</title>
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
@@ -16,11 +17,18 @@
 <body>
     <header>
         <div class="container">
-            <div class="logo-placeholder">Seu Logo Aqui</div>
+            <div class="logo-placeholder">
+            <img src=".../img_produtos/img_logo/Logo_website_linkei_mercado.png" 
+                 alt="Logo da Empresa"
+                 title="Voltar ao início">
+        </a>
+
+            </div>
+            
             <nav>
                 <ul>
                     <li><a href="index.html">Início</a></li>
-                    <li><a href="sobre.html">Sobre</a></li>
+                    <li><a href="#sobre">Sobre</a></li>
                     <li><a href="#produtos">Produtos</a></li>
                     <li><a href="gerenciador.html">Gerenciar Produtos</a></li> <!-- Link para o gerenciador -->
                 </ul>
