Tentativa de inserção da IMG da logo

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
@@ -18,7 +18,7 @@
     <header>
         <div class="container">
             <div class="logo-placeholder">
-            <img src=".../img_produtos/img_logo/Logo_website_linkei_mercado.png" 
+            <img src="/img_produtos/img_logo/Logo_website_linkei_mercado.png" 
                  alt="Logo da Empresa"
                  title="Voltar ao início">
         </a>
